Bug Fixes:
* Text for toolbar buttons wasn't always displayed on Win2000

New Features
* Rebar themes
* Forms Sample

Added CDialog::Create
Added CFrame::SetMenubarBandSize
Added CMenubar::SetIcons (for imagelists)
Added CRebar::GetBandBorders
Added CRebar::GetBandRect
Added CRebar::GetRowHeight
Added CRebar::GetTheme
Added CRebar::OnEraseBkGnd
Added CRebar::RepositionBands
Added CRebar::SetTheme
Added CToolbar::GetMaxSize
Added CWinApp::SetAccelerators
Added CWnd::GradientFill
Added CWnd::LoadBitmap
Added CWnd::SolidFill
Added REBARTHEME structure
Added GetComCtlVersion
Added IsXPThemed
Removed CWinApp::SetAcceleratorTable


Version 5.3
-----------
New Features:
* Owner drawn drop down menu items with icons.  CMenubar::SetIcons is
   used to determine which menu items display an icon. By default, the
   framework uses the toolbar's bitmap and resource IDs for displaying 
   icons. Override CFrame::SetButtons to change this behavior.
* Automatic subclassing for windows using WinAPI defined window classes.
   Now when a window is based on predefined window classes, like the 
   common controls (e.g. list-view, tree-view, richedit), the window is
   automatically subclassed. There is now no need to call the subclass
   function in use code.

Changes:
* The WndProc function used to route window messages has been simplified. 
   WndProcDefault should now used to pass messages on for further
   processing, rather than Cxxx::WndProc. (The old method will still work)
* The DialogProc function used to route dialog messages has been simplified.
   DialogProcDefault should now be used to pass messages on for further
   processing, rather than Cxxx::DialogProc. (The old method will still work)
* Added automatic subclassing for all windows created from predefined 
   window class types. This includes, for example, windows created from
   common controls like toolbars and edit controls.
* Removed superclassing. Its redundant now.